[package]
name = "trello-client"
description = "The library provides the basic functionality to interact with trello."
authors = ["BorisZhguchev <zhguchev@gmail.com>"]
license-file = "LICENSE"
version = "0.1.0"
edition = "2018"
homepage = "https://github.com/besok/trello-client"
repository = "https://github.com/besok/trello-client"
readme = "README.md"
keywords = ["trello", "json","api"]
categories = ["development-tools","api"]


[dependencies]
ureq = { version =" 2.2.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"